--- a/index.html
+++ b/index.html
@@ -550,32 +550,7 @@
 
                     <div class="bg-white p-6 rounded-xl shadow-sm">
                         <h3 class="text-lg font-semibold text-gray-800 mb-4">💼 Domaines qui m'intéressent</h3>
-                        <div class="space-y-3">
-                            <label class="flex items-center space-x-2">
-                                <input type="checkbox" id="domaine-international" class="rounded">
-                                <span>Relations internationales</span>
-                            </label>
-                            <label class="flex items-center space-x-2">
-                                <input type="checkbox" id="domaine-communication" class="rounded">
-                                <span>Communication et médias</span>
-                            </label>
-                            <label class="flex items-center space-x-2">
-                                <input type="checkbox" id="domaine-social" class="rounded">
-                                <span>Travail social et accompagnement</span>
-                            </label>
-                            <label class="flex items-center space-x-2">
-                                <input type="checkbox" id="domaine-education" class="rounded">
-                                <span>Éducation et formation</span>
-                            </label>
-                            <label class="flex items-center space-x-2">
-                                <input type="checkbox" id="domaine-tourisme" class="rounded">
-                                <span>Tourisme et voyages</span>
-                            </label>
-                            <label class="flex items-center space-x-2">
-                                <input type="checkbox" id="domaine-langues" class="rounded">
-                                <span>Langues et traduction</span>
-                            </label>
-                        </div>
+                        <textarea id="domaines-interet" placeholder="Quels secteurs ou domaines professionnels t'attirent le plus après cette expérience ? (10 lignes max)" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent resize-none" rows="10"></textarea>
                     </div>
                 </div>
 
@@ -593,46 +568,6 @@
                     <div class="bg-white p-6 rounded-xl shadow-sm">
                         <h3 class="text-lg font-semibold text-gray-800 mb-4">🎯 Mes prochaines étapes</h3>
                         <textarea id="prochaines-etapes" placeholder="Quelles sont tes prochaines étapes concrètes ? (formations, candidatures, projets...)" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent h-32 resize-none"></textarea>
-                    </div>
-                </div>
-
-                <div class="bg-gradient-to-r from-green-500 to-blue-500 p-6 rounded-xl text-white">
-                    <h3 class="text-lg font-semibold mb-4">🌍 Mon lien avec la mobilité internationale</h3>
-                    <div class="grid md:grid-cols-2 gap-6">
-                        <div>
-                            <h4 class="font-medium mb-2">Est-ce que tu veux partir toi-même ?</h4>
-                            <div class="space-y-2">
-                                <label class="flex items-center space-x-2">
-                                    <input type="radio" name="envie-partir" value="oui" class="text-white">
-                                    <span>Oui, j'ai envie de partir !</span>
-                                </label>
-                                <label class="flex items-center space-x-2">
-                                    <input type="radio" name="envie-partir" value="peut-etre" class="text-white">
-                                    <span>Peut-être, je réfléchis</span>
-                                </label>
-                                <label class="flex items-center space-x-2">
-                                    <input type="radio" name="envie-partir" value="non" class="text-white">
-                                    <span>Non, pas pour moi</span>
-                                </label>
-                            </div>
-                        </div>
-                        <div>
-                            <h4 class="font-medium mb-2">Veux-tu continuer à aider d'autres jeunes ?</h4>
-                            <div class="space-y-2">
-                                <label class="flex items-center space-x-2">
-                                    <input type="radio" name="continuer-aider" value="oui" class="text-white">
-                                    <span>Oui, j'adore ça !</span>
-                                </label>
-                                <label class="flex items-center space-x-2">
-                                    <input type="radio" name="continuer-aider" value="occasionnellement" class="text-white">
-                                    <span>De temps en temps</span>
-                                </label>
-                                <label class="flex items-center space-x-2">
-                                    <input type="radio" name="continuer-aider" value="non" class="text-white">
-                                    <span>Non, j'ai fait ma part</span>
-                                </label>
-                            </div>
-                        </div>
                     </div>
                 </div>
 
