--- a/index.html
+++ b/index.html
@@ -584,20 +584,21 @@
         </div>
 
         <!-- Boutons d'action -->
-        <div class="mt-8 flex flex-wrap justify-between items-center">
-            <div class="flex flex-wrap justify-center gap-4">
-                <button id="btn-pdf" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg font-medium transition-colors flex items-center space-x-2">
+        <div class="mt-8 flex flex-col md:flex-row md:justify-between items-center gap-y-4 md:gap-x-4">
+            <!-- Groupe de boutons gauche (Télécharger, Recommencer) -->
+            <div class="flex flex-col sm:flex-row justify-center gap-4 order-2 md:order-1 w-full md:w-auto">
+                <button id="btn-pdf" class="bg-indigo-600 hover:bg-indigo-700 text-white px-6 py-3 rounded-lg font-medium transition-colors flex items-center justify-center space-x-2">
                     <span>📄</span>
                     <span>Télécharger mon bilan</span>
                 </button>
-                <button id="btn-reset" class="bg-gray-500 hover:bg-gray-600 text-white px-6 py-3 rounded-lg font-medium transition-colors flex items-center space-x-2">
+                <button id="btn-reset" class="bg-gray-500 hover:bg-gray-600 text-white px-6 py-3 rounded-lg font-medium transition-colors flex items-center justify-center space-x-2">
                     <span>🔄</span>
                     <span>Recommencer</span>
                 </button>
             </div>
             
             <!-- Bouton Suivant -->
-            <button id="btn-suivant" class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-lg font-medium transition-colors flex items-center space-x-2">
+            <button id="btn-suivant" class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-lg font-medium transition-colors flex items-center justify-center space-x-2 order-1 md:order-2 w-full md:w-auto">
                 <span>Suivant</span>
                 <span>→</span>
             </button>
